# OpenGLStarter

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
Shaders/: bgShader.frag  bgShader.vert  depthShader.vert  lightShader.frag  shader.frag  shader.vert
src/: main.cpp
src/Libs/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h
